# formula_a

./: .gitignore  README.md  wing.stl
apps/: BUILD  racecar.app.json
arduino/scripts/: upload.sh
arduino/src/: main.ino
components/: BUILD  ManualControl.cpp  ManualControl.hpp
firmware/: main.ino
jetson/: requirements.txt
jetson/src/: camera.py  controller.py  xbox.py
jetson/src/drivers/: CMakeLists.txt  package.xml
jetson/src/drivers/include/: xbox_controller.hpp
jetson/src/drivers/launch/: test.launch.py
jetson/src/drivers/msg/: Input.msg  Output.msg
jetson/src/drivers/src/: main.cpp  xbox_controller.cpp
jetson/src/drivers/srv/: Power.srv  Trim.srv
models/: electronics_mount.stl  rear_wing.stl  shield.stl
